# llm-logits-analyzer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  SKILLS.md  SKILLS_SUMMARY.md  __init__.py  collect_requests.py  cycle_collector.py  pyproject.toml
docs/reports/: 20260318_glm5_v1.md  20260318_glm5_v2.md  20260321a_glm5.md  20260321b_glm5.md  20260321b_glm5_quantum.md  20260322_glm5_fruits.md  20260322_glm5_geography.md  20260322_glm5_output_divergence.md  20260322_glm5_simple_math.md  20260322_glm5_temperature_sampling.md  README.md
examples/: README.md  basic_analysis.py  batch_analysis.py  custom_analysis.py
lib/: __init__.py  cycle_data.py
skills/: __init__.py  complete_analysis.py  draft_quality.py  logits_inspect.py  reconstruct.py  stats.py
tests/: conftest.py  test_cycle_collector.py  test_cycle_data.py  test_integration.py  test_skills.py
